--- a/src/main/resources/com/example/jc_lapel/loginCustomer.fxml
+++ b/src/main/resources/com/example/jc_lapel/loginCustomer.fxml
@@ -70,7 +70,7 @@
          </font>
       </Label>
       <PasswordField fx:id="enterPasswordField" layoutX="542.0" layoutY="306.0" prefHeight="26.0" prefWidth="173.0" promptText="Password" />
-      <Button fx:id="loginButton" layoutX="542.0" layoutY="366.0" mnemonicParsing="false" onAction="#switchToTransferCustomer" prefHeight="26.0" prefWidth="173.0" style="-fx-background-color: #474B4D;" text="Login" textFill="WHITE">
+      <Button fx:id="loginButton" layoutX="542.0" layoutY="366.0" mnemonicParsing="false" onAction="#switchToCustomerMenu" prefHeight="26.0" prefWidth="173.0" style="-fx-background-color: #474B4D;" text="Login" textFill="WHITE">
          <font>
             <Font size="13.0" />
          </font>
