--- a/src/main/resources/com/example/jc_lapel/userMenuController.fxml
+++ b/src/main/resources/com/example/jc_lapel/userMenuController.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
@@ -133,5 +134,6 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <ChoiceBox layoutX="454.0" layoutY="412.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
