--- a/src/main/resources/com/example/jc_lapel/userMenu.fxml
+++ b/src/main/resources/com/example/jc_lapel/userMenu.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
@@ -14,7 +13,7 @@
 
 <AnchorPane prefHeight="675.0" prefWidth="938.0" style="-fx-background-color: #DCEBFA; -fx-background-color: #F8FBFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jc_lapel.userMenuController">
    <children>
-      <VBox prefHeight="675.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;">
+      <VBox prefHeight="679.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;">
          <children>
             <Pane prefHeight="112.0" prefWidth="319.0">
                <children>
@@ -126,38 +125,73 @@
       </Pane>
       <Pane layoutX="319.0" layoutY="116.0" prefHeight="563.0" prefWidth="620.0">
          <children>
-            <ImageView fx:id="ImageProfile" fitHeight="128.0" fitWidth="166.0" layoutX="453.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="Username" alignment="BASELINE_CENTER" prefHeight="35.0" prefWidth="453.0" text="username" textAlignment="CENTER">
+            <ImageView fx:id="ImageProfile" fitHeight="127.0" fitWidth="141.0" layoutX="466.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="userName" alignment="BASELINE_CENTER" layoutY="18.0" prefHeight="35.0" prefWidth="461.0" text="Username" textAlignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Pane layoutX="14.0" layoutY="64.0" prefHeight="55.0" prefWidth="270.0">
+            <Label alignment="CENTER_RIGHT" layoutX="13.0" layoutY="53.0" prefHeight="35.0" prefWidth="80.0" text="Name: " textAlignment="CENTER">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="fullRealName" layoutX="89.0" layoutY="53.0" prefHeight="35.0" prefWidth="372.0" text="Full name" textAlignment="CENTER">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Pane layoutX="13.0" layoutY="414.0" prefHeight="135.0" prefWidth="594.0">
                <children>
-                  <Label prefHeight="25.0" prefWidth="115.0" text="Current balance for -" />
-                  <Label layoutX="-8.0" layoutY="18.0" />
-                  <Label fx:id="activeAccountForUser1" layoutX="115.0" prefHeight="25.0" prefWidth="150.0" text="Count currently not chosen" />
-                  <Label layoutY="23.0" prefHeight="25.0" prefWidth="39.0" text="Total -" />
-                  <Label fx:id="currentActiveAccountTotalValue" layoutX="39.0" layoutY="23.0" prefHeight="25.0" prefWidth="39.0" text="Blank" />
-               </children>
-            </Pane>
-            <Pane layoutX="14.0" layoutY="119.0" prefHeight="170.0" prefWidth="179.0">
-               <children>
-                  <Button layoutY="58.0" mnemonicParsing="false" onAction="#onActionSwitchAccounts" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Switch accounts" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="14.0" prefHeight="35.0" prefWidth="141.0" text="Saving         " textAlignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="49.0" prefHeight="35.0" prefWidth="141.0" text="Checking     " textAlignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="SavingTotal" layoutX="155.0" layoutY="14.0" prefHeight="35.0" prefWidth="200.0" text="Total" textAlignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="CheckingTotal" layoutX="155.0" layoutY="49.0" prefHeight="35.0" prefWidth="200.0" text="Total" textAlignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="84.0" prefHeight="35.0" prefWidth="141.0" text="Other          " textAlignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="OtherTotal" layoutX="155.0" layoutY="84.0" prefHeight="35.0" prefWidth="200.0" text="Total" textAlignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Button alignment="BASELINE_LEFT" layoutX="391.0" layoutY="68.0" mnemonicParsing="false" onAction="#switchToManual" prefHeight="55.0" prefWidth="166.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="MANUAL" textFill="WHITE">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
+                     <padding>
+                        <Insets left="50.0" />
+                     </padding>
                      <font>
-                        <Font size="13.0" />
+                        <Font size="17.0" />
                      </font>
                      <effect>
                         <Glow />
                      </effect>
                   </Button>
-                  <Label layoutY="91.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #52779C;" text="Current Active account" />
-                  <Label layoutY="2.0" prefHeight="25.0" prefWidth="166.0" text="Choose Active account" />
-                  <Label fx:id="activeAccountForUser2" layoutY="123.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #52779C;" />
-                  <ChoiceBox fx:id="chooseAccountForUser" layoutY="27.0" prefWidth="150.0" />
+                  <Label layoutX="367.0" layoutY="14.0" prefHeight="35.0" prefWidth="213.0" text="Questions and help" textAlignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
          </children>
