--- a/src/main/resources/com/example/FrontEnd/userMenu.fxml
+++ b/src/main/resources/com/example/FrontEnd/userMenu.fxml
@@ -131,17 +131,17 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label alignment="CENTER_RIGHT" layoutX="13.0" layoutY="53.0" prefHeight="35.0" prefWidth="80.0" text="Name: " textAlignment="CENTER">
+            <Label alignment="CENTER_RIGHT" layoutX="13.0" layoutY="71.0" prefHeight="35.0" prefWidth="80.0" text="Name: " textAlignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="fullRealName" layoutX="89.0" layoutY="53.0" prefHeight="35.0" prefWidth="372.0" text="Full name" textAlignment="CENTER">
+            <Label fx:id="fullRealName" layoutX="93.0" layoutY="71.0" prefHeight="35.0" prefWidth="371.0" text="Full name" textAlignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Pane layoutX="13.0" layoutY="414.0" prefHeight="135.0" prefWidth="594.0">
+            <Pane layoutX="13.0" layoutY="147.0" prefHeight="135.0" prefWidth="594.0">
                <children>
                   <Label layoutX="14.0" layoutY="14.0" prefHeight="35.0" prefWidth="141.0" text="Saving         " textAlignment="CENTER">
                      <font>
@@ -153,12 +153,12 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Label fx:id="SavingTotal" layoutX="155.0" layoutY="14.0" prefHeight="35.0" prefWidth="200.0" text="Total" textAlignment="CENTER">
+                  <Label fx:id="SavingTotal" layoutX="155.0" layoutY="14.0" prefHeight="35.0" prefWidth="432.0" text="Total" textAlignment="CENTER">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Label fx:id="CheckingTotal" layoutX="155.0" layoutY="49.0" prefHeight="35.0" prefWidth="200.0" text="Total" textAlignment="CENTER">
+                  <Label fx:id="CheckingTotal" layoutX="155.0" layoutY="49.0" prefHeight="35.0" prefWidth="432.0" text="Total" textAlignment="CENTER">
                      <font>
                         <Font size="24.0" />
                      </font>
@@ -168,12 +168,16 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Label fx:id="OtherTotal" layoutX="155.0" layoutY="84.0" prefHeight="35.0" prefWidth="200.0" text="Total" textAlignment="CENTER">
+                  <Label fx:id="OtherTotal" layoutX="155.0" layoutY="84.0" prefHeight="35.0" prefWidth="432.0" text="Total" textAlignment="CENTER">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Button alignment="BASELINE_LEFT" layoutX="391.0" layoutY="68.0" mnemonicParsing="false" onAction="#switchToManual" prefHeight="55.0" prefWidth="166.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="MANUAL" textFill="WHITE">
+               </children>
+            </Pane>
+            <Pane layoutX="357.0" layoutY="402.0" prefHeight="147.0" prefWidth="250.0">
+               <children>
+                  <Button alignment="BASELINE_LEFT" layoutX="42.0" layoutY="73.0" mnemonicParsing="false" onAction="#switchToManual" prefHeight="55.0" prefWidth="166.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="MANUAL" textFill="WHITE">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -187,7 +191,7 @@
                         <Glow />
                      </effect>
                   </Button>
-                  <Label layoutX="367.0" layoutY="14.0" prefHeight="35.0" prefWidth="213.0" text="Questions and help" textAlignment="CENTER">
+                  <Label layoutX="19.0" layoutY="14.0" prefHeight="35.0" prefWidth="213.0" text="Questions and help" textAlignment="CENTER">
                      <font>
                         <Font size="24.0" />
                      </font>
