Making accessible to everyone

--- a/src/main/resources/com/example/FrontEnd/bankStatment.fxml
+++ b/src/main/resources/com/example/FrontEnd/bankStatment.fxml
@@ -76,14 +76,14 @@
         <Pane layoutX="10.0" layoutY="2.0" prefHeight="120.0" prefWidth="319.0" />
         <Label layoutX="384.0" layoutY="122.0" prefHeight="79.0" prefWidth="383.0" text="Bank Statement" textFill="#5d84a4">
             <font>
-                <Font name="System Bold" size="47.0" />
+                <Font name="Arial Bold" size="47.0" />
             </font>
         </Label>
         <Pane layoutX="319.0" prefHeight="112.0" prefWidth="620.0" style="-fx-background-color: #215E9B; -fx-background-color: #27313A;" AnchorPane.bottomAnchor="563.0" AnchorPane.leftAnchor="319.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Label layoutX="144.0" layoutY="40.0" text="THE BANK YOU DESERVE" textAlignment="CENTER" textFill="WHITE">
+                <Label layoutX="131.0" layoutY="40.0" prefHeight="32.0" prefWidth="350.0" text="THE BANK YOU DESERVE" textAlignment="CENTER" textFill="WHITE">
                     <font>
-                        <Font name="Garamond Italic" size="27.0" />
+                        <Font name="Arial Bold" size="27.0" />
                     </font>
                     <effect>
                         <DropShadow />
@@ -111,7 +111,7 @@
             </TableView>
             <Label text="Transfer history of 30 days:">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="Arial Bold" size="12.0" />
                </font>
             </Label>
          </children>
