--- a/src/main/resources/com/example/FrontEnd/registerCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/registerCustomer.fxml
@@ -20,7 +20,7 @@
                     <children>
                         <Label layoutX="49.0" layoutY="41.0" prefHeight="31.0" prefWidth="221.0" text="JC. LAPEL United Bank" textFill="WHITE">
                             <font>
-                                <Font name="System Bold" size="20.0" />
+                                <Font name="Arial" size="20.0" />
                             </font>
                         </Label>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" />
@@ -34,7 +34,7 @@
                         <Insets left="50.0" />
                     </padding>
                     <font>
-                        <Font size="17.0" />
+                        <Font name="Arial" size="17.0" />
                     </font>
                     <effect>
                         <Glow />
@@ -48,7 +48,7 @@
                         <Insets left="50.0" />
                     </padding>
                     <font>
-                        <Font size="17.0" />
+                        <Font name="Arial" size="17.0" />
                     </font>
                     <effect>
                         <Glow />
@@ -60,7 +60,7 @@
         <Pane layoutX="10.0" layoutY="2.0" prefHeight="120.0" prefWidth="319.0" />
         <Label layoutX="384.0" layoutY="209.0" text="Firstname">
             <font>
-                <Font size="13.0" />
+                <Font name="Arial" size="13.0" />
             </font>
         </Label>
         <TextField fx:id="firstnameTextField" layoutX="384.0" layoutY="228.0" prefHeight="26.0" prefWidth="232.0" promptText="Firstname" />
@@ -70,34 +70,34 @@
       <PasswordField fx:id="confirmPasswordField" layoutX="384.0" layoutY="450.0" prefHeight="26.0" prefWidth="232.0" promptText="Confirm Password" />
         <Button fx:id="createAccountButton" layoutX="382.0" layoutY="501.0" mnemonicParsing="false" onAction="#onActionCreateAccount" prefHeight="27.0" prefWidth="232.0" style="-fx-background-color: #474B4D;" text="Create Account" textFill="WHITE">
             <font>
-                <Font size="13.0" />
+                <Font name="Arial" size="13.0" />
             </font>
         </Button>
         <Button fx:id="cancelButton" layoutX="382.0" layoutY="541.0" mnemonicParsing="false" onAction="#switchToStart" prefHeight="27.0" prefWidth="232.0" style="-fx-background-color: #474B4D;" text="Cancel" textFill="WHITE">
             <font>
-                <Font size="13.0" />
+                <Font name="Arial" size="13.0" />
             </font>
         </Button>
       <Label layoutX="384.0" layoutY="320.0" text="Username">
          <font>
-            <Font size="13.0" />
+            <Font name="Arial" size="13.0" />
          </font>
       </Label>
         <Label layoutX="386.0" layoutY="373.0" text="Password">
             <font>
-                <Font size="13.0" />
+                <Font name="Arial" size="13.0" />
             </font>
         </Label>
         <Label layoutX="384.0" layoutY="122.0" prefHeight="79.0" prefWidth="383.0" text="Create Account" textFill="#5d84a4">
             <font>
-                <Font name="System Bold" size="47.0" />
+                <Font name="Arial" size="47.0" />
             </font>
         </Label>
         <Pane layoutX="319.0" prefHeight="112.0" prefWidth="620.0" style="-fx-background-color: #215E9B; -fx-background-color: #27313A;" AnchorPane.bottomAnchor="563.0" AnchorPane.leftAnchor="319.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
             <children>
                 <Label layoutX="144.0" layoutY="40.0" text="THE BANK YOU DESERVE" textAlignment="CENTER" textFill="WHITE">
                     <font>
-                        <Font name="Garamond Italic" size="27.0" />
+                        <Font name="Arial" size="27.0" />
                     </font>
                     <effect>
                         <DropShadow />
@@ -107,12 +107,12 @@
         </Pane>
       <Label layoutX="384.0" layoutY="263.0" text="Lastname">
          <font>
-            <Font size="13.0" />
+            <Font name="Arial" size="13.0" />
          </font>
       </Label>
       <Label layoutX="382.0" layoutY="430.0" text="Confirm Password">
          <font>
-            <Font size="13.0" />
+            <Font name="Arial" size="13.0" />
          </font>
       </Label>
     </children>
