--- a/src/main/resources/com/example/FrontEnd/loginCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/loginCustomer.fxml
@@ -20,7 +20,7 @@
                <children>
                   <Label layoutX="49.0" layoutY="41.0" prefHeight="31.0" prefWidth="221.0" text="JC. LAPEL United Bank" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="20.0" />
+                        <Font name="Arial Bold" size="20.0" />
                      </font>
                   </Label>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" />
@@ -34,7 +34,7 @@
                   <Insets left="50.0" />
                </padding>
                <font>
-                  <Font size="17.0" />
+                  <Font name="Arial Bold" size="17.0" />
                </font>
                <effect>
                   <Glow />
@@ -48,7 +48,7 @@
                   <Insets left="50.0" />
                </padding>
                <font>
-                  <Font size="17.0" />
+                  <Font name="Arial Bold" size="17.0" />
                </font>
                <effect>
                   <Glow />
@@ -60,19 +60,19 @@
       <Pane layoutX="10.0" layoutY="2.0" prefHeight="120.0" prefWidth="319.0" />
       <Label layoutX="469.0" layoutY="265.0" text="Username">
          <font>
-            <Font size="13.0" />
+            <Font name="Arial Bold" size="13.0" />
          </font>
       </Label>
-      <TextField fx:id="usernameTextField" layoutX="542.0" layoutY="262.0" prefHeight="26.0" prefWidth="173.0" promptText="Username" />
+      <TextField font ="Arial Bold" fx:id="usernameTextField" layoutX="542.0" layoutY="262.0" prefHeight="26.0" prefWidth="173.0" promptText="Username" />
       <Label layoutX="469.0" layoutY="309.0" text="Password">
          <font>
-            <Font size="13.0" />
+            <Font name="Arial Bold" size="13.0" />
          </font>
       </Label>
-      <PasswordField fx:id="enterPasswordField" layoutX="542.0" layoutY="306.0" prefHeight="26.0" prefWidth="173.0" promptText="Password" />
+      <PasswordField font="Arial Bold"fx:id="enterPasswordField" layoutX="542.0" layoutY="306.0" prefHeight="26.0" prefWidth="173.0" promptText="Password" />
       <Button fx:id="loginButton" layoutX="542.0" layoutY="366.0" mnemonicParsing="false" onAction="#switchToCustomerMenu" prefHeight="26.0" prefWidth="173.0" style="-fx-background-color: #474B4D;" text="Login" textFill="WHITE">
          <font>
-            <Font size="13.0" />
+            <Font name="Arial Bold" size="13.0" />
          </font>
       </Button>
       <Button layoutX="542.0" layoutY="405.0" mnemonicParsing="false" onAction="#switchToStart" prefHeight="26.0" prefWidth="173.0" style="-fx-background-color: #474B4D;" text="Cancel" textFill="WHITE">
@@ -82,7 +82,7 @@
       </Button>
       <Label layoutX="542.0" layoutY="164.0" prefHeight="71.0" prefWidth="174.0" text="Sign in" textFill="#5d84a4">
          <font>
-            <Font name="System Bold" size="47.0" />
+            <Font name="Arial Bold" size="47.0" />
          </font>
       </Label>
       <Pane layoutX="319.0" prefHeight="112.0" prefWidth="620.0" style="-fx-background-color: #215E9B; -fx-background-color: #27313A;" AnchorPane.bottomAnchor="563.0" AnchorPane.leftAnchor="319.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
@@ -90,7 +90,7 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0" />
             <Label layoutX="144.0" layoutY="40.0" text="THE BANK YOU DESERVE" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font name="Garamond Italic" size="27.0" />
+                  <Font name="Arial Bold" size="27.0" />
                </font>
                <effect>
                   <DropShadow />
