--- a/src/main/resources/com/example/FrontEnd/transferCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/transferCustomer.fxml
@@ -20,7 +20,7 @@
                     <children>
                         <Label layoutX="49.0" layoutY="41.0" prefHeight="31.0" prefWidth="221.0" text="JC. LAPEL United Bank" textFill="WHITE">
                             <font>
-                                <Font name="System Bold" size="20.0" />
+                                <Font name="Arial Bold" size="20.0" />
                             </font>
                         </Label>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" />
@@ -87,14 +87,14 @@
         <Pane layoutX="10.0" layoutY="2.0" prefHeight="120.0" prefWidth="319.0" />
         <Label layoutX="384.0" layoutY="122.0" prefHeight="79.0" prefWidth="383.0" text="Transfer money" textFill="#5d84a4">
             <font>
-                <Font name="System Bold" size="47.0" />
+                <Font name="Arial Bold" size="47.0" />
             </font>
         </Label>
         <Pane layoutX="319.0" prefHeight="112.0" prefWidth="620.0" style="-fx-background-color: #215E9B; -fx-background-color: #27313A;" AnchorPane.bottomAnchor="563.0" AnchorPane.leftAnchor="319.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
             <children>
                 <Label layoutX="144.0" layoutY="40.0" text="THE BANK YOU DESERVE" textAlignment="CENTER" textFill="WHITE">
                     <font>
-                        <Font name="Garamond Italic" size="27.0" />
+                        <Font name="Arial Bold" size="27.0" />
                     </font>
                     <effect>
                         <DropShadow />
@@ -104,32 +104,32 @@
         </Pane>
       <Label layoutX="384.0" layoutY="225.0" prefHeight="26.0" prefWidth="397.0" text="From Account:">
          <font>
-            <Font name="Garamond Bold" size="16.0" />
+            <Font name="Arial Bold" size="16.0" />
          </font>
       </Label>
       <ChoiceBox fx:id="fromAccount" layoutX="384.0" layoutY="251.0" prefHeight="26.0" prefWidth="353.0" />
       <Label layoutX="384.0" layoutY="312.0" prefHeight="26.0" prefWidth="397.0" text="To Acccount:">
          <font>
-            <Font name="Garamond Bold" size="16.0" />
+            <Font name="Arial Bold" size="16.0" />
          </font>
       </Label>
       <Label layoutX="384.0" layoutY="468.0" prefHeight="26.0" prefWidth="397.0" text="How much:">
          <font>
-            <Font name="Garamond Bold" size="16.0" />
+            <Font name="Arial Bold" size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="transferAmount" layoutX="384.0" layoutY="494.0" prefHeight="26.0" prefWidth="354.0" promptText="SEK" />
+      <TextField font="Arial Bold" fx:id="transferAmount" layoutX="384.0" layoutY="494.0" prefHeight="26.0" prefWidth="354.0" promptText="SEK" />
       <Button layoutX="384.0" layoutY="568.0" mnemonicParsing="false" onAction="#onActionTransfer" prefHeight="26.0" prefWidth="166.0" text="Transfer" />
       <Button layoutX="571.0" layoutY="568.0" mnemonicParsing="false" onAction="#switchToStart" prefHeight="26.0" prefWidth="166.0" text="Cancel" />
       <ChoiceBox fx:id="toAccount" layoutX="384.0" layoutY="338.0" prefHeight="26.0" prefWidth="353.0" />
       <Label layoutX="384.0" layoutY="277.0" prefHeight="26.0" prefWidth="118.0" text="Current balance:">
          <font>
-            <Font name="Garamond Bold" size="16.0" />
+            <Font name="Arial Bold" size="16.0" />
          </font>
       </Label>
       <Label fx:id="fromAccountCurrentBalance" layoutX="502.0" layoutY="277.0" prefHeight="26.0" prefWidth="179.0" text="Click to find total balance">
          <font>
-            <Font name="Garamond Bold" size="16.0" />
+            <Font name="Arial Bold" size="16.0" />
          </font>
       </Label>
       <Button layoutX="684.0" layoutY="277.0" mnemonicParsing="false" onAction="#onActionButtonTotal" prefHeight="26.0" prefWidth="54.0" text="Total" />
