--- a/src/main/resources/com/example/FrontEnd/profile.fxml
+++ b/src/main/resources/com/example/FrontEnd/profile.fxml
@@ -74,7 +74,7 @@
                <children>
                   <Pane layoutX="12.0" layoutY="282.0" prefHeight="247.0" prefWidth="596.0">
                      <children>
-                        <PasswordField font="Arial Bold" fx:id="checkCurrentPassword" layoutY="52.0" />
+                        <PasswordField fx:id="checkCurrentPassword" layoutY="52.0" />
                         <Label layoutY="27.0" prefHeight="25.0" prefWidth="149.0" text="Current password">
                            <font>
                               <Font name="Arial Bold" size="17.0" />
@@ -90,8 +90,8 @@
                               <Font name="Arial Bold" size="17.0" />
                            </font>
                         </Label>
-                        <PasswordField font="Arial Bold" fx:id="newPassword" layoutY="124.0" />
-                        <PasswordField font="Arial Bold" fx:id="confirmNewPassword" layoutY="205.0" />
+                        <PasswordField fx:id="newPassword" layoutY="124.0" />
+                        <PasswordField fx:id="confirmNewPassword" layoutY="205.0" />
                         <Button layoutX="149.0" layoutY="205.0" mnemonicParsing="false" onAction="#onActionChangePassword" prefHeight="25.0" prefWidth="140.0" text="Change password" />
                         <Label alignment="CENTER" layoutY="1.0" prefHeight="26.0" prefWidth="290.0" text="Change password">
                            <font>
@@ -99,7 +99,7 @@
                            </font>
                         </Label>
                         <Button layoutX="456.0" layoutY="205.0" mnemonicParsing="false" onAction="#onActionChangeLastName" prefHeight="25.0" prefWidth="140.0" text="Change Last name" />
-                        <TextField font="Arial Bold" fx:id="newLastName" layoutX="305.0" layoutY="205.0" />
+                        <TextField fx:id="newLastName" layoutX="305.0" layoutY="205.0" />
                         <Label layoutX="305.0" layoutY="179.0" prefHeight="26.0" prefWidth="176.0" text="New Last name">
                            <font>
                               <Font name="Arial Bold" size="17.0" />
@@ -110,7 +110,7 @@
                               <Font name="Arial Bold" size="17.0" />
                            </font>
                         </Label>
-                        <TextField font="Arial Bold" fx:id="newFirstName" layoutX="305.0" layoutY="124.0" />
+                        <TextField fx:id="newFirstName" layoutX="305.0" layoutY="124.0" />
                         <Button layoutX="456.0" layoutY="124.0" mnemonicParsing="false" onAction="#onActionChangeFirstName" prefHeight="25.0" prefWidth="140.0" text="Change First name" />
                         <Label layoutX="305.0" layoutY="98.0" prefHeight="25.0" prefWidth="176.0" text="New First name">
                            <font>
