--- a/src/main/resources/com/example/FrontEnd/profile.fxml
+++ b/src/main/resources/com/example/FrontEnd/profile.fxml
@@ -74,7 +74,10 @@
                <children>
                   <Pane layoutX="12.0" layoutY="282.0" prefHeight="247.0" prefWidth="596.0">
                      <children>
-                        <PasswordField fx:id="checkCurrentPassword" layoutY="52.0" />
+                        <PasswordField fx:id="checkCurrentPassword" layoutY="52.0" promptText="Current Password">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font></PasswordField>
                         <Label layoutY="27.0" prefHeight="25.0" prefWidth="149.0" text="Current password">
                            <font>
                               <Font name="Arial Bold" size="17.0" />
@@ -90,16 +93,31 @@
                               <Font name="Arial Bold" size="17.0" />
                            </font>
                         </Label>
-                        <PasswordField fx:id="newPassword" layoutY="124.0" />
-                        <PasswordField fx:id="confirmNewPassword" layoutY="205.0" />
-                        <Button layoutX="149.0" layoutY="205.0" mnemonicParsing="false" onAction="#onActionChangePassword" prefHeight="25.0" prefWidth="140.0" text="Change password" />
+                        <PasswordField fx:id="newPassword" layoutY="124.0" promptText="New Password">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font></PasswordField>
+                        <PasswordField fx:id="confirmNewPassword" layoutY="205.0" promptText="Confirm">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font></PasswordField>
+                        <Button layoutX="149.0" layoutY="205.0" mnemonicParsing="false" onAction="#onActionChangePassword" prefHeight="25.0" prefWidth="140.0" text="Change password">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font></Button>
                         <Label alignment="CENTER" layoutY="1.0" prefHeight="26.0" prefWidth="290.0" text="Change password">
                            <font>
                               <Font name="Arial Bold" size="17.0" />
                            </font>
                         </Label>
-                        <Button layoutX="456.0" layoutY="205.0" mnemonicParsing="false" onAction="#onActionChangeLastName" prefHeight="25.0" prefWidth="140.0" text="Change Last name" />
-                        <TextField fx:id="newLastName" layoutX="305.0" layoutY="205.0" />
+                        <Button layoutX="456.0" layoutY="205.0" mnemonicParsing="false" onAction="#onActionChangeLastName" prefHeight="25.0" prefWidth="140.0" text="Change Last name">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font></Button>
+                        <TextField fx:id="newLastName" layoutX="305.0" layoutY="205.0" promptText="New lastname">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font></TextField>
                         <Label layoutX="305.0" layoutY="179.0" prefHeight="26.0" prefWidth="176.0" text="New Last name">
                            <font>
                               <Font name="Arial Bold" size="17.0" />
@@ -110,8 +128,14 @@
                               <Font name="Arial Bold" size="17.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="newFirstName" layoutX="305.0" layoutY="124.0" />
-                        <Button layoutX="456.0" layoutY="124.0" mnemonicParsing="false" onAction="#onActionChangeFirstName" prefHeight="25.0" prefWidth="140.0" text="Change First name" />
+                        <TextField fx:id="newFirstName" layoutX="305.0" layoutY="124.0" promptText="New firstname">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font></TextField>
+                        <Button layoutX="456.0" layoutY="124.0" mnemonicParsing="false" onAction="#onActionChangeFirstName" prefHeight="25.0" prefWidth="140.0" text="Change First name">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font></Button>
                         <Label layoutX="305.0" layoutY="98.0" prefHeight="25.0" prefWidth="176.0" text="New First name">
                            <font>
                               <Font name="Arial Bold" size="17.0" />
@@ -122,8 +146,14 @@
                               <Font name="Arial Bold" size="17.0" />
                            </font>
                         </Label>
-                        <TextField font="Arial Bold" fx:id="newUsername" layoutX="305.0" layoutY="52.0" />
-                        <Button layoutX="456.0" layoutY="52.0" mnemonicParsing="false" onAction="#onActionChangeUsername" prefHeight="25.0" prefWidth="140.0" text="Change Username" />
+                        <TextField fx:id="newUsername" layoutX="305.0" layoutY="52.0" promptText="New username">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font></TextField>
+                        <Button layoutX="456.0" layoutY="52.0" mnemonicParsing="false" onAction="#onActionChangeUsername" prefHeight="25.0" prefWidth="140.0" text="Change Username">
+                           <font>
+                              <Font name="Arial" size="12.0" />
+                           </font></Button>
                         <Label layoutX="305.0" layoutY="25.0" prefHeight="26.0" prefWidth="176.0" text="New username">
                            <font>
                               <Font name="Arial Bold" size="17.0" />
@@ -137,7 +167,10 @@
                      </children>
                   </Pane>
                   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="383.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true" />
-                  <Button layoutX="383.0" layoutY="187.0" mnemonicParsing="false" onAction="#onActionChangeProfileImage" prefHeight="25.0" prefWidth="200.0" text="Upload user profile image" />
+                  <Button layoutX="383.0" layoutY="187.0" mnemonicParsing="false" onAction="#onActionChangeProfileImage" prefHeight="25.0" prefWidth="200.0" text="Upload user profile image">
+                     <font>
+                        <Font name="Arial" size="12.0" />
+                     </font></Button>
                   <Pane layoutX="20.0" layoutY="50.0" prefHeight="150.0" prefWidth="290.0">
                      <children>
                         <Label layoutY="7.0" prefHeight="26.0" prefWidth="85.0" text="First name">
