--- a/src/main/resources/com/example/FrontEnd/transferCustomer.fxml
+++ b/src/main/resources/com/example/FrontEnd/transferCustomer.fxml
@@ -34,7 +34,7 @@
                         <Insets left="50.0" />
                     </padding>
                     <font>
-                        <Font size="17.0" />
+                        <Font name="Arial" size="17.0" />
                     </font>
                     <effect>
                         <Glow />
@@ -48,7 +48,7 @@
                         <Insets left="50.0" />
                     </padding>
                     <font>
-                        <Font size="17.0" />
+                        <Font name="Arial" size="17.0" />
                     </font>
                     <effect>
                         <Glow />
@@ -62,7 +62,7 @@
                   <Insets left="50.0" />
                </padding>
                <font>
-                  <Font size="17.0" />
+                  <Font name="Arial" size="17.0" />
                </font>
                <effect>
                   <Glow />
@@ -76,7 +76,7 @@
                   <Insets left="50.0" />
                </padding>
                <font>
-                  <Font size="17.0" />
+                  <Font name="Arial" size="17.0" />
                </font>
                <effect>
                   <Glow />
@@ -118,9 +118,18 @@
             <Font name="Arial Bold" size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="transferAmount" layoutX="384.0" layoutY="494.0" prefHeight="26.0" prefWidth="354.0" promptText="SEK" />
-      <Button layoutX="384.0" layoutY="568.0" mnemonicParsing="false" onAction="#onActionTransfer" prefHeight="26.0" prefWidth="166.0" text="Transfer" />
-      <Button layoutX="571.0" layoutY="568.0" mnemonicParsing="false" onAction="#switchToStart" prefHeight="26.0" prefWidth="166.0" text="Cancel" />
+      <TextField fx:id="transferAmount" layoutX="384.0" layoutY="494.0" prefHeight="26.0" prefWidth="354.0" promptText="SEK">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font></TextField>
+      <Button layoutX="384.0" layoutY="568.0" mnemonicParsing="false" onAction="#onActionTransfer" prefHeight="26.0" prefWidth="166.0" text="Transfer">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font></Button>
+      <Button layoutX="571.0" layoutY="568.0" mnemonicParsing="false" onAction="#switchToStart" prefHeight="26.0" prefWidth="166.0" text="Cancel">
+         <font>
+            <Font name="Arial" size="12.0" />
+         </font></Button>
       <ChoiceBox fx:id="toAccount" layoutX="384.0" layoutY="338.0" prefHeight="26.0" prefWidth="353.0" />
       <Label layoutX="384.0" layoutY="277.0" prefHeight="26.0" prefWidth="118.0" text="Current balance:">
          <font>
