--- a/src/main/resources/com/example/FrontEnd/bankStatment.fxml
+++ b/src/main/resources/com/example/FrontEnd/bankStatment.fxml
@@ -43,21 +43,7 @@
                         <Glow />
                     </effect>
                 </Button>
-                <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToTransferHistory" prefHeight="55.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="BANK TRANSFER" textFill="WHITE">
-                    <opaqueInsets>
-                        <Insets />
-                    </opaqueInsets>
-                    <padding>
-                        <Insets left="50.0" />
-                    </padding>
-                    <font>
-                        <Font name="Arial" size="17.0" />
-                    </font>
-                    <effect>
-                        <Glow />
-                    </effect>
-                </Button>
-                <Button alignment="BASELINE_LEFT" layoutX="10.0" layoutY="232.0" mnemonicParsing="false" onAction="#switchToFinanceProject" prefHeight="55.0" prefWidth="321.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="PORTFOLIO" textFill="WHITE">
+                <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#switchToStart" prefHeight="55.0" prefWidth="319.0" style="-fx-background-color: #52779C; -fx-background-color: #414D59;" text="Logout" textFill="WHITE">
                     <opaqueInsets>
                         <Insets />
                     </opaqueInsets>
